--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -40,7 +40,7 @@
                             onclick="loadPage('/1100')">1100</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand" href="#" class="text-primary"
+                        <a class="navbar-brand" href="javascript:;" class="text-primary"
                             onclick="loadPage('/1200')">1200</a>
                     </li>
                     <!-- <li class="nav-item dropdown active">
